--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+<script src="database/Constants.js"></script>
+<script src="database/Back.js"></script>
+<script src="database/Neck.js"></script>
+<script src="components/GearSelect.js"></script>
 <script src="GearSet.js"></script>
 <script src="index.js"></script>
 </body>
