--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <Test></Test>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
+<script src="https://unpkg.com/vue-router@3.1.5/dist/vue-router.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
 <script src="database/Constants.js"></script>
 <script src="database/Back.js"></script>
