--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset=utf-8>
   <meta http-equiv=X-UA-Compatible content="IE=edge">
   <title>To God Be The Glory</title>
+  <link rel=icon href=guild_badge.png>
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
   <link href=./css/chunk-vendors.8111ab00.css rel=stylesheet>
@@ -12,7 +13,7 @@
 <noscript><strong>We're sorry but classicwow.github.io doesn't work properly without JavaScript enabled. Please enable
   it to continue.</strong></noscript>
 <div id=app></div>
-<script src=./js/chunk-vendors.ac02cdf3.js></script>
-<script src=./js/app.de7960bf.js></script>
+<script src=./js/chunk-vendors.1e667cb6.js></script>
+<script src=./js/app.7574d775.js></script>
 </body>
 </html>
